--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,11 +1,15 @@
 <body>
 
+    <a href="/login">
+        <button>Login</button>
+    </a>
+
     <!-- show any messages that come back with authentication -->
     <% if (message.length > 0) { %>
         <div class="alert alert-danger"><%= message %></div>
     <% } %>
 
-    <!-- LOGIN FORM -->
+    <!-- SIGNUP FORM -->
     <form action="/signup" method="post">
         <div class="form-group">
             <label>Email</label>
