--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,26 +1,34 @@
+<!DOCTYPE html>
+<html>
+
+<head>
+    <link href="/views/css/style.css" rel="stylesheet" type="text/css">
+</head>
+
 <body>
 
     <a href="/login">
-        <button>Login</button>
+        <button class="link">Login</button>
     </a>
 
     <!-- show any messages that come back with authentication -->
     <% if (message.length > 0) { %>
-        <div class="alert alert-danger"><%= message %></div>
+        <div class="error"><%= message %></div>
     <% } %>
 
     <!-- SIGNUP FORM -->
     <form action="/signup" method="post">
-        <div class="form-group">
+        <div class="">
             <label>Email</label>
-            <input type="text" class="form-control" name="email">
+            <input type="text" class="" name="email">
         </div>
-        <div class="form-group">
+        <div class="">
             <label>Password</label>
-            <input type="password" class="form-control" name="password">
+            <input type="password" class="" name="password">
         </div>
 
-        <button type="submit" class="btn btn-warning btn-lg">Signup</button>
+        <button type="submit" class="form">Signup</button>
     </form>
     
 </body>
+</html>
