--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -10,25 +10,22 @@
     <a href="/login">
         <button class="link">Login</button>
     </a>
+    
+        <!-- show any messages that come back with authentication -->
+        <% if (message.length > 0) { %>
+            <div class="error"><%= message %></div>
+        <% } %>
+    
+        <!-- SIGNUP FORM -->
+        <form class="auth" action="/signup" method="post">
+            <div class="inputs">
+                <input type="text" class="" name="email" placeholder="Email"> 
+                <br/>
+                <input type="password" class="" name="password" placeholder="Password">
+            </div>
+            <button type="submit" class="submit">Signup</button>
+        </form>
 
-    <!-- show any messages that come back with authentication -->
-    <% if (message.length > 0) { %>
-        <div class="error"><%= message %></div>
-    <% } %>
-
-    <!-- SIGNUP FORM -->
-    <form action="/signup" method="post">
-        <div class="">
-            <label>Email</label>
-            <input type="text" class="" name="email">
-        </div>
-        <div class="">
-            <label>Password</label>
-            <input type="password" class="" name="password">
-        </div>
-
-        <button type="submit" class="form">Signup</button>
-    </form>
     
 </body>
 </html>
