updated profile pg, index, css

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -11,11 +11,11 @@
         <button class="link">Logout</button>
     </a>
 
-    <a href="/profile">
-        <button class="link">Profile</button>
+    <a href="/">
+        <button class="link">Home</button>
     </a>
     
-    <h1>Welcome to AppThing!</h1>
+    <h1>Welcome <%= user%>! </h1>
 
 </body>
 </html>
